# melonDS

./: .gitignore  AFLPLUSPLUS.md  AGENTS.md  CMakeLists.txt  CMakePresets.json  EXECPLAN.md  FUZZCTL.md  SAND.md  test_rom.nds
src/: ARMInterpreter_ALU.cpp  ARMJIT.cpp  CP15.cpp  NDS.cpp  Platform.h  SPI.cpp
src/frontend/headless/: CMakeLists.txt  HeadlessInput.h  HeadlessPlatform.h  Platform.cpp  afl_harness_arm9_blob.cpp  afl_harness_rom.cpp  main.cpp
tools/: fuzzctl
tools/aflplusplus/: assemble_arm9_blob.sh  build_aflplusplus.sh  extract_arm9_blob.sh  run_fuzz.sh  run_fuzz_multi.sh  time_harnesses.py
tools/blocksds/hello_jit/: Makefile  README.md  hello_jit.nds
tools/blocksds/hello_jit/source/: main.c
tools/blocksds/jit_seeds/: Makefile  README.md
tools/blocksds/jit_seeds/sources/: seed_arith.c  seed_arm_cond.arm.c  seed_arm_ldm.arm.c  seed_branches.c  seed_common.c  seed_common.h  seed_memory.c  seed_smc.c  seed_table.c  seed_thumb_branches.c  seed_thumb_calls.c  seed_thumb_shifts.c  seed_thumb_stack.c  seed_thumb_unaligned.c
